--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -21,4 +21,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivityActivity">
 
+  <com.karumi.expandableselector.ExpandableSelector
+      android:id="@+id/es_colors"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentBottom="true"
+      android:layout_alignParentRight="true"
+      android:layout_margin="10dp"/>
+
 </RelativeLayout>
