Initialize view inflating a layout which will be used internally

--- a/expandableselector/src/main/res/layout/expandable_selector.xml
+++ b/expandableselector/src/main/res/layout/expandable_selector.xml
@@ -15,8 +15,8 @@
   ~ limitations under the License.
   -->
 
-<manifest package="com.karumi.expandableselector">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-  <application/>
-
-</manifest>
+</merge>
