--- a/expandableselector/src/main/res/values/attrs.xml
+++ b/expandableselector/src/main/res/values/attrs.xml
@@ -15,23 +15,6 @@
   ~ limitations under the License.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.karumi.expandableselector.sample">
-
-  <application
-      android:allowBackup="true"
-      android:icon="@mipmap/ic_logo_karumi"
-      android:label="@string/app_name"
-      android:theme="@style/AppTheme">
-    <activity
-        android:name=".MainActivity"
-        android:label="@string/app_name">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
-  </application>
-
-</manifest>
+<resources>
+  <attr name="expandableItemStyle" format="reference"/>
+</resources>
