--- a/sample/src/main/res/values/styles.xml
+++ b/sample/src/main/res/values/styles.xml
@@ -15,8 +15,12 @@
   ~ limitations under the License.
   -->
 
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<resources>
 
-</merge>
+  <style name="ExpandableItemStyle">
+    <item name="android:layout_height">20dp</item>
+    <item name="android:layout_width">20dp</item>
+    <item name="android:src">@android:drawable/ic_btn_speak_now</item>
+    <item name="android:background">#FF0000</item>
+  </style>
+</resources>
