--- a/sample/src/main/res/values/themes.xml
+++ b/sample/src/main/res/values/themes.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
+<resources>
+  <!--
   ~ Copyright (C) 2015 Karumi.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,24 +15,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <item name="expandableItemStyle">@style/ExpandableItemStyle</item>
+  </style>
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.karumi.expandableselector.sample">
-
-  <application
-      android:allowBackup="true"
-      android:icon="@mipmap/ic_logo_karumi"
-      android:label="@string/app_name"
-      android:theme="@style/AppTheme">
-    <activity
-        android:name=".MainActivity"
-        android:label="@string/app_name">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
-  </application>
-
-</manifest>
+</resources>
