Add test animation. We need to resize the view to be able to perform the animation

--- a/sample/src/main/res/values/styles.xml
+++ b/sample/src/main/res/values/styles.xml
@@ -18,8 +18,8 @@
 <resources>
 
   <style name="ExpandableItemStyle">
-    <item name="android:layout_height">20dp</item>
-    <item name="android:layout_width">20dp</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_width">wrap_content</item>
     <item name="android:src">@android:drawable/ic_btn_speak_now</item>
     <item name="android:background">#FF0000</item>
   </style>
