--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -27,7 +27,7 @@
       android:layout_height="120dp"
       android:layout_alignParentBottom="true"
       android:layout_alignParentRight="true"
-      android:background="@android:color/black"
+      android:background="#15000000"
       android:layout_margin="10dp"/>
 
 </RelativeLayout>
