--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -23,8 +23,8 @@
 
   <com.karumi.expandableselector.ExpandableSelector
       android:id="@+id/es_colors"
-      android:layout_width="120dp"
-      android:layout_height="120dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_alignParentRight="true"
       android:background="#15000000"
