--- a/sample/src/main/res/drawable/item_green.xml
+++ b/sample/src/main/res/drawable/item_green.xml
@@ -15,12 +15,14 @@
   ~ limitations under the License.
   -->
 
-<resources>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
 
-  <style name="ExpandableItemStyle">
-    <item name="android:layout_height">wrap_content</item>
-    <item name="android:layout_width">wrap_content</item>
-    <item name="android:background">@android:color/transparent</item>
-    <item name="android:layout_margin">4dp</item>
-  </style>
-</resources>
+  <solid
+      android:color="#FF42543C"/>
+
+  <size
+      android:width="40dp"
+      android:height="40dp"/>
+</shape>
