Replace configuratino based on styles with configuration based on xml params

--- a/expandableselector/src/main/res/values/attrs.xml
+++ b/expandableselector/src/main/res/values/attrs.xml
@@ -16,5 +16,8 @@
   -->
 
 <resources>
-  <attr name="expandableItemStyle" format="reference"/>
+  <declare-styleable name="expandable_selector">
+    <attr name="expandable_item_background" format="reference"/>
+    <attr name="expandable_item_margin" format="dimension"/>
+  </declare-styleable>
 </resources>
