--- a/sample/src/main/res/drawable/bg_item_with_title.xml
+++ b/sample/src/main/res/drawable/bg_item_with_title.xml
@@ -15,4 +15,14 @@
   ~ limitations under the License.
   -->
 
-<Button style="?expandableItemStyle"/>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+
+  <solid
+      android:color="#FFFFFFFF"/>
+
+  <size
+      android:width="40dp"
+      android:height="40dp"/>
+</shape>
