--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -17,6 +17,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:expandable_selector="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivityActivity">
@@ -28,7 +29,9 @@
       android:layout_alignParentBottom="true"
       android:layout_alignParentRight="true"
       android:background="#15000000"
-      android:layout_margin="10dp"/>
+      android:layout_margin="10dp"
+      expandable_selector:expandable_item_background="@android:color/transparent"
+      expandable_selector:expandable_item_margin="4dp"/>
 
   <com.karumi.expandableselector.ExpandableSelector
       android:id="@+id/es_sizes"
@@ -37,7 +40,9 @@
       android:layout_alignParentBottom="true"
       android:layout_alignParentLeft="true"
       android:background="#15000000"
-      android:layout_margin="10dp"/>
+      android:layout_margin="10dp"
+      expandable_selector:expandable_item_background="@drawable/bg_item_with_title"
+      expandable_selector:expandable_item_margin="4dp"/>
 
 
 </RelativeLayout>
