Add attribute to configure the size of the item

--- a/expandableselector/src/main/res/values/attrs.xml
+++ b/expandableselector/src/main/res/values/attrs.xml
@@ -18,6 +18,7 @@
 <resources>
   <declare-styleable name="expandable_selector">
     <attr name="expandable_item_background" format="reference"/>
+    <attr name="expandable_item_size" format="dimension"/>
     <attr name="expandable_item_margin" format="dimension"/>
   </declare-styleable>
 </resources>
