--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -42,6 +42,7 @@
       android:background="#15000000"
       android:layout_margin="10dp"
       expandable_selector:expandable_item_background="@drawable/bg_item_with_title"
+      expandable_selector:expandable_item_size="40dp"
       expandable_selector:expandable_item_margin="4dp"/>
 
 
