--- a/expandableselector/src/main/res/values/attrs.xml
+++ b/expandableselector/src/main/res/values/attrs.xml
@@ -20,5 +20,6 @@
     <attr name="expandable_item_background" format="reference"/>
     <attr name="expandable_item_size" format="dimension"/>
     <attr name="expandable_item_margin" format="dimension"/>
+    <attr name="hide_background_if_collapsed" format="boolean"/>
   </declare-styleable>
 </resources>
