Move part of the configuration to styles configured in the application theme

--- a/expandableselector/src/main/res/values/attrs.xml
+++ b/expandableselector/src/main/res/values/attrs.xml
@@ -17,9 +17,9 @@
 
 <resources>
   <declare-styleable name="expandable_selector">
-    <attr name="expandable_item_background" format="reference"/>
-    <attr name="expandable_item_size" format="dimension"/>
-    <attr name="expandable_item_margin" format="dimension"/>
     <attr name="hide_background_if_collapsed" format="boolean"/>
   </declare-styleable>
+
+  <attr name="expandableItemStyle"/>
+
 </resources>
