--- a/expandableselector/src/main/res/layout/expandable_item_image_button.xml
+++ b/expandableselector/src/main/res/layout/expandable_item_image_button.xml
@@ -15,16 +15,4 @@
   ~ limitations under the License.
   -->
 
-<resources>
-
-  <style name="ExpandableItemStyle">
-    <item name="android:layout_height">40dp</item>
-    <item name="android:layout_width">40dp</item>
-    <item name="android:background">@drawable/bg_item_with_title</item>
-    <item name="android:layout_margin">4dp</item>
-    <item name="android:textColor">#FF929292</item>
-    <item name="android:textSize">18sp</item>
-  </style>
-
-
-</resources>
+<ImageButton style="?expandableItemStyle"/>
