--- a/sample/src/main/res/values/styles.xml
+++ b/sample/src/main/res/values/styles.xml
@@ -26,5 +26,15 @@
     <item name="android:textSize">18sp</item>
   </style>
 
+  <style name="ExpandableItemStyleHeader">
+    <item name="android:layout_height">40dp</item>
+    <item name="android:layout_width">40dp</item>
+    <item name="android:layout_margin">4dp</item>
+    <item name="android:textSize">9sp</item>
+    <item name="android:textColor">#FFFFFFFF</item>
+    <item name="android:layout_gravity">bottom|center_horizontal</item>
+    <item name="android:background">@drawable/item_brown</item>
+  </style>
+
 
 </resources>
