--- a/expandableselector/src/main/res/values/attrs.xml
+++ b/expandableselector/src/main/res/values/attrs.xml
@@ -18,6 +18,7 @@
 <resources>
   <declare-styleable name="expandable_selector">
     <attr name="hide_background_if_collapsed" format="boolean"/>
+    <attr name="animation_duration" format="integer"/>
   </declare-styleable>
 
   <attr name="expandableItemStyle"/>
