--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -61,6 +61,7 @@
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
+      android:background="@drawable/bg_expandable_selector_dark"
       expandable_selector:animation_duration="100"
       android:layout_margin="10dp"/>
 
