--- a/sample/src/main/res/drawable/bg_expandable_selector.xml
+++ b/sample/src/main/res/drawable/bg_expandable_selector.xml
@@ -20,6 +20,6 @@
     android:shape="rectangle">
 
   <corners android:radius="100dp"/>
-  <solid android:color="@android:color/white"/>
+  <solid android:color="@color/white"/>
 
 </shape>
