--- a/sample/src/main/res/drawable-v21/bg_item_with_title.xml
+++ b/sample/src/main/res/drawable-v21/bg_item_with_title.xml
@@ -20,7 +20,7 @@
     android:color="?android:colorControlHighlight">
   <item>
     <shape android:shape="oval">
-      <solid android:color="#FFFFFFFF"/>
+      <solid android:color="@color/white"/>
       <size
           android:width="40dp"
           android:height="40dp"/>
