--- a/sample/src/main/res/drawable-v21/item_brown.xml
+++ b/sample/src/main/res/drawable-v21/item_brown.xml
@@ -20,7 +20,7 @@
     android:color="?android:colorControlHighlight">
   <item>
     <shape android:shape="oval">
-      <solid android:color="#FF4B2D29"/>
+      <solid android:color="@color/brown"/>
       <size
           android:width="40dp"
           android:height="40dp"/>
