--- a/sample/src/main/res/drawable/bg_expandable_selector_dark.xml
+++ b/sample/src/main/res/drawable/bg_expandable_selector_dark.xml
@@ -20,6 +20,6 @@
     android:shape="rectangle">
 
   <corners android:radius="100dp"/>
-  <solid android:color="@android:color/black"/>
+  <solid android:color="@color/black"/>
 
 </shape>
