--- a/sample/src/main/res/drawable/item_green.xml
+++ b/sample/src/main/res/drawable/item_green.xml
@@ -20,7 +20,7 @@
     android:shape="oval">
 
   <solid
-      android:color="#FF42543C"/>
+      android:color="@color/green"/>
 
   <size
       android:width="40dp"
