--- a/sample/src/main/res/drawable-v21/item_brown.xml
+++ b/sample/src/main/res/drawable-v21/item_brown.xml
@@ -22,8 +22,8 @@
     <shape android:shape="oval">
       <solid android:color="@color/brown"/>
       <size
-          android:width="40dp"
-          android:height="40dp"/>
+          android:width="@dimen/item_size"
+          android:height="@dimen/item_size"/>
     </shape>
   </item>
 </ripple>
