--- a/sample/src/main/res/drawable/bg_expandable_selector.xml
+++ b/sample/src/main/res/drawable/bg_expandable_selector.xml
@@ -19,7 +19,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-  <corners android:radius="100dp"/>
+  <corners android:radius="@dimen/background_radius"/>
   <solid android:color="@color/white"/>
 
 </shape>
