--- a/sample/src/main/res/values/integers.xml
+++ b/sample/src/main/res/values/integers.xml
@@ -15,11 +15,6 @@
   ~ limitations under the License.
   -->
 
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-
-  <corners android:radius="@dimen/background_radius"/>
-  <solid android:color="@color/black"/>
-
-</shape>
+<resources>
+<integer name="custom_animation_duration">100</integer>
+</resources>
