Rename some files and fix lint errors

--- a/expandableselector/src/main/res/layout/expandable_item_image_button.xml
+++ b/expandableselector/src/main/res/layout/expandable_item_image_button.xml
@@ -15,4 +15,7 @@
   ~ limitations under the License.
   -->
 
-<ImageButton style="?expandableItemStyle"/>
+<ImageButton
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="RequiredSize"
+    style="?expandableItemStyle"/>
