--- a/expandableselector/src/main/res/layout/expandable_item_button.xml
+++ b/expandableselector/src/main/res/layout/expandable_item_button.xml
@@ -15,4 +15,7 @@
   ~ limitations under the License.
   -->
 
-<Button style="?expandableItemStyle"/>
+<Button
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="RequiredSize"
+    style="?expandableItemStyle"/>
