--- a/expandableselector/src/main/res/values/attrs.xml
+++ b/expandableselector/src/main/res/values/attrs.xml
@@ -20,6 +20,9 @@
     <attr name="hide_background_if_collapsed" format="boolean"/>
     <attr name="animation_duration" format="integer"/>
     <attr name="hide_first_item_on_collapse" format="boolean"/>
+    <attr name="expand_interpolator" format="reference"/>
+    <attr name="collapse_interpolator" format="reference"/>
+    <attr name="container_interpolator" format="reference"/>
   </declare-styleable>
 
   <attr name="expandableItemStyle"/>
